<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:weightSum="1"
    app:autoSizeTextType="uniform">

    <ImageView
        android:id="@+id/todo_icon_id"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/evening"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_weight="0.7"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="start"
        app:autoSizeTextType="uniform">

        <TextView
            android:id="@+id/todo_type_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_type"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/todo_place_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/todo_title"
            android:textSize="12sp"
            android:textColor="@color/colorGrey"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="0.3"
        android:layout_marginEnd="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/todo_time_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="end"
            android:text="@string/time"
            android:textSize="12sp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorGrey" />

        <Button
            android:id="@+id/remove_button_id"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="end"
            android:paddingEnd="-40dp"
            android:paddingStart="-40dp"
            android:layout_marginTop="15dp"
            android:text="@string/remove"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:background="#FCF6F5FF"
            />

    </LinearLayout>


</LinearLayout>