<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".AddToDo">

    <ImageButton
        android:id="@+id/back_button_id"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/add_title_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_thing"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button_id"
        app:layout_constraintBottom_toBottomOf="@id/back_button_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/edit_icon_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/edit"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_title_text_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/type_spinner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_icon_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/MatchSpinnerTheme"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:backgroundTint="@color/colorWhite"/>

    <EditText
        android:id="@+id/title_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:shadowColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textCursorDrawable="@drawable/cursor"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_spinner_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/place_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:shadowColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textCursorDrawable="@drawable/cursor"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_edit_id"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/time_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_time"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:shadowColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textCursorDrawable="@drawable/cursor"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_edit_id"
        app:layout_constraintEnd_toEndOf="parent" />



    <EditText
        android:id="@+id/notification_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notification"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:shadowColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textCursorDrawable="@drawable/cursor"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_edit_id"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/save_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_your_thing"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:background="@color/colorLightBlue"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_edit_id"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>